config/samples/gateway-hybrid-with-gatewayconfiguration-and-per-gateway-infrastructure_v2.yaml
# GEP-1867: Per-Gateway Infrastructure
# https://gateway-api.sigs.k8s.io/geps/gep-1867/
# This sample demonstrates how to configure a hybrid Kong Gateway with
# per-Gateway infrastructure using GatewayConfiguration resources.
# The GatewayConfiguration resource named "common-infra-configuration-kong" defines
# the control plane connection details for the data plane.
# The GatewayConfiguration resource named "custom-infra-configuration-kong"
# defines the infrastructure details for the Gateway with custom settings by
# setting the source to "Mirror" and specifying the Konnect Control Plane ID.
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: hybrid-kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: common-infra-configuration-kong
    namespace: default
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: common-hybrid-kong
  namespace: default
spec:
  gatewayClassName: hybrid-kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: custom-hybrid-kong
  namespace: default
spec:
  gatewayClassName: hybrid-kong
  infrastructure:
    parametersRef:
      group: gateway-operator.konghq.com
      kind: GatewayConfiguration
      name: custom-infra-configuration-kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
